tweet-service-graphql-nodejs/istio-configs/istio-mp-authorizer-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: acp-authorizer
  namespace: svc-apps-graph-ns
spec:
  action: CUSTOM
  provider:
    name: acp-authorizer
  rules:
  - {}
